@@ -107,9 +107,10 @@
                 </animation>
                 <control type="group">
                     <height>view_pad</height>
+                    <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
+                    <include>Animation_FadeInOut</include>
                     <!-- Left Info -->
                     <control type="grouplist">
-                        <visible allowhiddenfocus="true">![Control.HasFocus(9601) | [System.IdleTime(4) + Skin.HasSetting(AutoPlotOverlay) + [Window.IsVisible(MyVideoNav.xml) | Window.IsVisible(MyMusicNav.xml) | Window.IsVisible(Home)] + ![Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]]]</visible>
                         <include>Animation_FadeInOut</include>
                         <itemgap>0</itemgap>
                         <left>view_pad</left>
@@ -294,7 +295,7 @@
                     </control>
                 </control>
                 <control type="group">
-                    <visible allowhiddenfocus="true">![Control.HasFocus(9601) | [System.IdleTime(4) + Skin.HasSetting(AutoPlotOverlay) + [Window.IsVisible(MyVideoNav.xml) | Window.IsVisible(MyMusicNav.xml) | Window.IsVisible(Home)] + ![Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]]]</visible>
+                    <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
                     <include>Animation_FadeInOut</include>
                     <include condition="Window.IsVisible(Home) + !Window.IsVisible(script-globalsearch.xml)">Topbar_Home_TextButtons</include>
                     <include condition="Window.IsVisible(script-globalsearch.xml)">Topbar_GlobalSearch_TextButtons</include>
@@ -740,13 +741,13 @@
                 <top>30</top>
                 <control type="group">
                     <height>view_pad</height>
+                    <include>Animation_FadeInOut</include>
+                    <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
                     <!-- Left Info -->
                     <control type="grouplist">
                         <itemgap>0</itemgap>
                         <left>view_pad</left>
                         <align>left</align>
-                        <visible allowhiddenfocus="true">![Control.HasFocus(9601) | [System.IdleTime(4) + Skin.HasSetting(AutoPlotOverlay) + [Window.IsVisible(MyVideoNav.xml) | Window.IsVisible(MyMusicNav.xml) | Window.IsVisible(Home)] + ![Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]]]</visible>
-                        <include>Animation_FadeInOut</include>
                         <orientation>horizontal</orientation>
                         <usecontrolcoords>true</usecontrolcoords>
                         <control type="label">
