@@ -78,7 +78,7 @@
             <visible allowhiddenfocus="true">Control.HasFocus(431)</visible>
         </control>
         <control type="group">
-            <visible allowhiddenfocus="true">![Control.HasFocus(9601) | [System.IdleTime(4) + Skin.HasSetting(AutoPlotOverlay) + [Window.IsVisible(MyVideoNav.xml) | Window.IsVisible(MyMusicNav.xml) | Window.IsVisible(Home)] + ![Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]]]</visible>
+            <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
             <include>Animation_FadeInOut</include>
             <control type="group">
                 <include>Animation_Right</include>
