@@ -1,5 +1,6 @@
 [B]0.9.30[/B]
 SKINSETTINGS - Fix reset to defaults button
+PLOTOVERLAY - Hide clock in plot overlay
 
 [B]0.9.29[/B]
 DEPENDENCY - Remove Skin Helper as Dependency (Now optional install)
